# opencl-commons

./: .gitignore  Makefile.am  README  autogen.sh  common.c  common.h  configure.ac  join_driver.c  join_kernel.c  join_kernel.cl  merge_driver.c  sort_driver.c
src/: Makefile.am  common.c  common.h  join_driver.c  join_kernel.cl  sort_kernel.cl
test/: Makefile.am  check_common.c
